# Programmieren-II

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Drawing/: CMakeLists.txt  Drawing.cpp
DrawingTest/: CMakeLists.txt  Main.cpp
Ex01/: CMakeLists.txt  Ex01.cpp  Ex01.h  Segment.cpp  Segment.h  input.txt
Ex01/output/: output1.txt  output2.txt  output4.txt
Ex02/: CMakeLists.txt  Ex02.cpp
Ex02/Integer/: CMakeLists.txt  Integer.cpp  Integer.h
Ex02/Integer/IntegerTest/: CMakeLists.txt  IntegerTest.cpp
Ex02/Rational/: CMakeLists.txt  Rational.cpp  Rational.h  RationalTest.cpp
Ex02/Rational/RationalTest/: CMakeLists.txt  RationalTest.cpp
Ex03/: CMakeLists.txt  Ex03.cpp  LinkedList.cpp  LinkedList.h  MyDrawing.h  PenPolygon.cpp  PenPolygon.h  Picture.cpp  Picture.h  Polygon.cpp  Polygon.h  SpiralPolygon.cpp  SpiralPolygon.h  main.cpp
Ex04/: CMakeLists.txt  Integer.cpp  Integer.h  Polynomial.cpp  Polynomial.h  PolynomialMain.cpp  Ring.h
Ex05/: CMakeLists.txt  Integer.cpp  Integer.h  Polynomial.cpp  Polynomial.h  PolynomialMain.cpp  Polynomial_.h  Rational.cpp  Rational.h  Ring.h
